    - Fix perl interpreter selection (SZABGAB)
    - Updated DBD::SQLite dependency to 1.27 and ORLite dependency to 1.30.
      This should now correctly throw an exception on a corrupt padre.db file
      which will cause an immediate crash at startup with a SQLite-related
      error message instead of a secondary error message complaining about
      missing Padre::DB classes (ADAMK)

0.53 2009.12.23
    - Add initial version of a debugger using Debug::Client (SZABGAB)
    - Fix crashes when running refactor actions when there
      is no document (AZAWAWI)
    - Open resource searches now for user selections (AZAWAWI)
    - The Open resource's OK button is disabled when the 
      search results list is empty (AZAWAWI)
    - Help search (F2) now supports *ALL* installed CPAN modules (AZAWAWI)
    - Fixed "Syntax Check" focus loss bug while switching tabs quickly
      and a syntax error is in one of them (AZAWAWI)
    - Help search does not block when loading a long help topics
      list (AZAWAWI)
    - Ticket #787: Add a test for breakpoints to testsuite (SEWI)
    - Fixed missing mime type guessing that caused new Padre documents to
      default always to Scintilla (AZAWAWI)
    - Landed new multi-resource locking subsystem. Many operations are now
      prevented from refreshing the GUI multiple times. Startup, shutdown,
      open and close multiple files, session changing all much faster (ADAMK)
    - In Open resource, path is now cleaned from slashes on win32 (AZAWAWI)
    - Fixed Padre crash when closing a Perl 5 script tab quickly while syntax
      check is on (AZAWAWI)
    - Added "No errors/warnings to $project-relative-filename" to syntax
      checker. (AZAWAWI)
    - Quick Menu access now displays Padre action label, name and comments
      in an HTML window instead of a static label (AZAWAWI)
    - Make the focus on "Find in files" work when called from Quick menu 
      access dialog (AZAWAWI)