@@ -1624,8 +1624,8 @@ sub event_on_left_up {
 # Returns Perl's Help Provider
 #
 sub get_help_provider {
-	require Padre::HelpProvider::Perl;
-	return Padre::HelpProvider::Perl->new;
+	require Padre::Document::Perl::Help;
+	return Padre::Document::Perl::Help->new;
 }
 
 #
